samples/_failures_safe/1761714937_7eadaf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25bb1085.c: In function ‘main’:
./samples/SAFE/__tmp_25bb1085.c:165:5: error: ‘print_’ undeclared (first use in this function); did you mean ‘printf’?
  165 |     print_
      |     ^~~~~~
      |     printf
./samples/SAFE/__tmp_25bb1085.c:165:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_25bb1085.c:165:11: error: expected ‘;’ at end of input
  165 |     print_
      |           ^
      |           ;
./samples/SAFE/__tmp_25bb1085.c:165:5: error: expected declaration or statement at end of input
  165 |     print_
      |     ^~~~~~
